fixed spacing between buttons in header

--- a/css/main.css
+++ b/css/main.css
@@ -108,14 +108,17 @@ body {
     box-shadow: none;
 }
 .btn {
+    width: 167px;
+    height: 53px;
     font-size: 16px;
+    line-height: 27px;
     font-weight: bold;
     background-color: #0f7bff;
     border-radius: 50px;
-    padding: 10px 50px;
     cursor: pointer;
     outline: none;
     flex-shrink: 0;
+    padding: 10px 35px;
 }
 .btn a {
     color: #fff;
@@ -256,6 +259,7 @@ body {
     margin-bottom: 10px;
 }
 .section-header-wrapper__buttons {
+    width: 362px;
     display: flex;
     justify-content: space-between;
     margin: 0 16%;
